# darewise-test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
k8s/base/: backlog.yaml  kustomization.yaml  mongo.yaml
k8s/overlays/development/: backlog-dev.env  kustomization.yaml
src/: entrypoint.sh
src/backlog/: epics.py  main.py  models.py  settings.py
src/backlog/routers/: bugs.py  epics.py  log.py  tasks.py
tests/: conftest.py  test_api.py  test_epics.py
