[tool.poetry]
authors = ["MR"]
description = "Backlog tracking tool"
name = "backlog"
version = "0.1"

[tool.poetry.dependencies]
fastapi = "^0.75.1"
mongoengine = "^0.24.1"
pydantic = "*"
python = "^3.9"
requests = "*"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
bandit = "*"
behave = "*"
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
safety = "*"
schemathesis = "^3.13.9"
taskipy = "*"
types-requests = "*"

[tool.taskipy.tasks]
check_style = """
echo "> Starting style checks"        \
 && echo ">> [1/3] Running isort"     \
 && isort --check-only .              \
 && echo ">> [2/3] Running black"     \
 && black --check src tests           \
 && echo ">> [3/3] Running flake8"    \
 && flake8 src                        \
 && echo "> Style checks ok"          \
"""

tests = """
echo ">> [1/2] Running mypy"          \
 && mypy src                          \
 && echo ">> [2/2] Running pytest"    \
 && pytest --cov src tests            \
 && echo "> Tests checks ok"          \
"""

scan_vulnerabilities = """
echo ">> [1/2] Running bandit"        \
 && bandit -r src                     \
 && echo ">> [2/2] Running safety"    \
 && safety check                      \
 && echo "> Vulnerability checks ok"  \
"""

[tool.black]
exclude = '''
(
  /(
    | \.git
    | \.venv
    | \.mypy_cache
    | sdk
  )/
)
'''
target_version = ['py39']

[tool.isort]
line_length = 90
profile = "black"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0"]
